Day4 refactoring